$Id: ChangeLog,v 1.25 2004/03/26 20:02:04 h_oudejans Exp $

2004-03-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult now sends update enable commands to openmsx
	* Firmware button only available if firmware available on the 
	   current machine

2004-03-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Updates for audiocontrol on openmsx now result in update
	   the audiomixer in catapult.
	* Videocontrols with reset button now reset to the first value
	   taken from openmsx.
	*  Moved statusinfo to the last tab
	*  Firmware should now only be enabled if a machine has it	

2004-03-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* updates from openmsx result now in update to the controls
	   (all but the dynamic audio controls)
	* Added the layout of the launchbutton / Leds a bit

2004-03-23 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Implemented autoappy for textcontrols
	* Removed apply en quit buttons
	* Move leds from statuspage to global
	* Finished the midi/sample sound I/O part

2004-03-22 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added midi in/out and sample input plugins
	* Filenames still need to be done
	
2004-03-21 Manuel Bilderbeek <manuel@msxnet.org>
	* removed Mute button from MiscControls, made the new one in
	  AudioControls functional
	* some code layout clean ups
	* set status properly during hidden launch

2004-03-21 Herman Oudejans <hn.oudejans@quicknet.nl>
	* use openmsx_info sounddevice <device> to query the devicetype.
	* Moonsound devices are now noted as stereo.
	* linux comboboxwidth in audiomixer is for now fixed on 40 pixels.
	* When not availble, mastervolume is disabled and sliders are ranged
	   from 0-32767.
	* When available, the 'unset' command is used instead of 'restoredefault'

2004-03-20 Manuel Bilderbeek <manuel@msxnet.org>
	* added frames per second display in status bar
	* set status in status bar (could be expanded)

2004-03-19 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added audiocontrolspage